@@ -3,6 +3,8 @@ ver 0.16.4 (2011/??/??)
 * decoder:
   - ffmpeg: workaround for semantic API change in recent ffmpeg versions
   - flac: validate the sample rate when scanning the tag
+* output:
+  - alsa: fix SIGFPE when alsa announces a period size of 0
 
 
 ver 0.16.3 (2011/06/04)
